--- a/index.html
+++ b/index.html
@@ -36,43 +36,33 @@ Other affiliations:</p>
 </ul>
 </td></tr></table>
 <p><h2 id="themes">Research Themes</h2></p>
-<p>My research is motivated by understanding the computational foundations of <i>intelligent behavior</i>, often through the lens of <i>natural language</i>.
-I am excited about <a href="https://en.wikipedia.org/wiki/Intelligence_amplification"><i>intelligence amplification</i></a> — building computational models that would augment human experience in a mutually interdependent fashion.
-The dominant majority of my research is aligned with <i>natural language processing</i> (ACL, NAACL, EMNLP), <i>machine learning</i>  (ICLR, NeurIPS, ICML) and <i>artificial intelligence</i> (AAAI, IJCAI).</p>
-<p>Here are several themes I am interested in: </p>
+<p>Broadly, my research is motivated by <b>making AI</b> (1) <b>helpful</b> and (2) <b>efficient</b>.</p>
+<p>In pursuit of these objectives, my team and I have made various endeavors toward the following more specific themes:</p>
 <ul>
-<li><p><b>General-purpose models:</b>
-AlphaGo may be the world champion at Go, although it can't solve any other problem! How can we build models that generalize a broader scope of tasks, abilities, modalities, or environments?</p>
+<li><p><i>Augmentation</i>: Developing computational models that synergistically augment human experience. The ultimate goal of our work is to benefit humans!</p>
+</li>
+<li><p><i>Generality</i>: Developing models that generalize a broader scope of tasks, abilities, modalities, or environments. Often, the challenge here is the long tail of problems.</p>
+</li>
+<li><p><i>Specificity</i>: Developing models tailored to specific user needs or application domains to offer both utility and efficiency.</p>
+</li>
+<li><p><i>Self-supervised learning</i> of representations of the world using cheap signals in the wild (web data, physical environment, etc.) in an algorithmically efficient (data and compute) manner.</p>
+</li>
+<li><p><i>Reasoning</i>: Improving models&rsquo; ability to communicate via <i>reasons</i>, for novel problem-solving (recovering from earlier mistakes) and also explainability (using “reasons” to explain or justify decisions).</p>
+</li>
+<li><p><i>Interpretability</i>: Analyzing model operations to help humans understand behaviors, e.g., how does in-context learning emerge or operate? How do LMs balance between &lsquo;remembering&rsquo; and &lsquo;learning&rsquo;?</p>
+</li>
+<li><p><i>Safety</i>: Making AI more transparent to allow democratic oversight and governance of systems (their algorithmic biases and mistakes) by a population of users.</p>
+</li>
+<li><p><i>Interaction</i>: Effectively engaging with humans and other AI systems for, for example, coordination.</p>
+</li>
+<li><p><i>Applications of AI</i>: We are excited about the increased adoption of AI! We have ongoing work on AI for {science, education, and clinical applications}.</p>
 </li>
 </ul>
-<ul>
-<li><p><b>Self-supervised representation learning:</b>
-The AI literature has found powerful ways to build rich representations of the world by utilizing cheap signals available in the wild (web data, physical environment, etc.).
-How can we make these algorithms more effective and efficient (in terms of data or computation cost)?
-How can we make them robust to distributional drifts in data, e.g., low-data regimes or adversarial settings?
-How can we scale them up to various modalities or forms of communication/interaction?</p>
-</li>
-</ul>
-<ul>
-<li><p><b>Reasoning and problem-solving:</b>  I view &ldquo;reasoning&rdquo; as the process of using &ldquo;reasons&rdquo; to explain or justify decisions.
-How can we enable machines to communicate via <i>reasons</i>, for a broad-ranging spectrum of tasks?
-How can we make this process &ldquo;verifiable&rdquo; or &ldquo;explainable&rdquo; to humans?
-Can we build systems that can recourse upon a mistake?</p>
-</li>
-</ul>
-<ul>
-<li><p><b>Interaction, communication, and coordination:</b>  Can we engineer AI systems to effectively engage, interact, and communicate with humans and other AI systems for the purpose of, for example, coordination?</p>
-</li>
-</ul>
-<ul>
-<li><p><b>AI ↔ humans:</b> <i>The ultimate goal of our work is to benefit humans!</i> How should we engineer the interface between AI and machines?
-What forms of interaction are most effective and meaningful for humans? How can we make AI systems more transparent and accountable to humans? Can we turn such transparency into a truly democratic oversight of systems, their algorithmic biases and mistakes? How should we think about personalizing AI systems to their users?</p>
-</li>
-</ul>
+<p>The dominant majority of my research is aligned with the following research communities: <i>natural language processing</i> (ACL, NAACL, EMNLP), <i>machine learning</i>  (ICLR, NeurIPS, ICML), and <i>artificial intelligence</i> (AAAI, IJCAI).</p>
 <div class="infoblock">
 <div class="blockcontent">
 <p><i>If you are an undergraduate or masters student and would like to work on research with my group, please fill out <a href="https://forms.gle/6AZg34JVkkZZieySA">this form</a>.</i><br />
-<i>If you're seeking <b>postdoctoral</b> positions, consider applying for the <a href="https://apply.interfolio.com/158121">DSAI fellowships</a>. (<b>deadline: Jan 06, 2025</b>)</i></p>
+</p>
 </div></div>
 <p><h2 id="talks">Recent Talks</h2></p>
 <ul>
@@ -138,6 +128,10 @@ What forms of interaction are most effective and meaningful for humans? How can 
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2025.01.15.633272v1"><b>CARDBiomedBench: A Benchmark for Evaluating Large Language Model Performance in Biomedical Research.</b></a>  <br />    Owen  Bianchi, Maya  Willey, Chelsea X  Avarado, Benjamin  Danek, Marzieh  Khani, Nicole  Kuznetsov, Anant  Dadu, Syed  Shah, Mathew J  Koretsky, Mary B  Makarious, Cory  Weller, Kristin S  Levine, Sungwon  Kim, Paige  Jarreau, Dan  Vitale, Elise  Marsan, Hirotaka  Iwaki, Hampton  Leonard, Sara  Bandres-Ciga, Andrew B  Singleton, Mike A.  Nalls, Shekoufeh  Mokhtari, Daniel  Khashabi and Faraz Faghri. <br />   <font color="Gray">biorxiv preprint 2025.01.15.63327</font>, 2025. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/CARDBiomedBench">[data]</a> <a href="https://github.com/NIH-CARD/CARDBiomedBench">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2407.07778"><b>WorldAPIs: The World Is Worth How Many APIs? A Thought Experiment.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, <a href="https://scholar.google.com/citations?user=5fsB_GMAAAAJ"><font color="Black"> Arda Uzunoglu</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Artificial Intelligence (AAAI)</font>, 2025. <font size=-1><a href="https://youtu.be/9Rrv7QPwS_Y">[talk]</a></font></p>
 </li>
 </ul>
@@ -150,7 +144,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2411.11844"><b>Generative World Explorer.</b></a>  <br />    <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2411.11844</font>, 2024. <font size=-1><a href="https://generative-world-explorer.github.io/">[project]</a> <a href="https://www.youtube.com/channel/UCWWiAEF7PMk-OK0-rwGITIg">[demo]</a></font></p>
+<li><p><a href="https://arxiv.org/pdf/2411.11844"><b>Generative World Explorer.</b></a>  <br />    <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2411.11844</font>, 2024. <font size=-1><a href="https://generative-world-explorer.github.io/">[project]</a> <a href="https://www.youtube.com/channel/UCWWiAEF7PMk-OK0-rwGITIg">[demo]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -222,7 +216,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2310.08540"><b>Revisiting the Hypothesis: Do Pretrained Transformers Learn In-Context by Gradient Descent?</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">International Conference on Machine Learning (ICML)</font>, 2024. <font size=-1><a href="https://danielkhashabi.com/files/2024_icl_gd/2024_icml_icl_gd.pptx">[slides]</a> <a href="https://www.youtube.com/watch?v=JrBtK3d7Jo8">[talk]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2310.08540"><b>Do Pretrained Transformers Learn In-Context by Gradient Descent?</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">International Conference on Machine Learning (ICML)</font>, 2024. <font size=-1><a href="https://danielkhashabi.com/files/2024_icl_gd/2024_icml_icl_gd.pptx">[slides]</a> <a href="https://www.youtube.com/watch?v=JrBtK3d7Jo8">[talk]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -374,10 +368,6 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 </ul>
 <ul>
-<li><p><a href="http://arxiv.org/abs/1901.02522"><b>On the Possibilities and Limitations of Multi-hop Reasoning Under Linguistic Imperfections.</b></a>  <br />    <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Erfan  Sadeqi Azer, <a href="https://allenai.org/team/tushark"><font color="Black"> Tushar Khot</font></a>, <a href="https://allenai.org/team/ashishs"><font color="Black"> Ashish Sabharwal</font></a> and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:1901.02522</font>, 2019. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/1909.03065"><b>&lsquo;&lsquo;Going on a vacation&rsquo;&rsquo; takes longer than &lsquo;&lsquo;Going for a walk&rsquo;&rsquo;: A Study of Temporal Commonsense Understanding.</b></a>  <br />    <a href="http://xuanyu.me/"><font color="Black"> Ben Zhou</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Qiang Ning and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2019. <font size=-1><a href="http://danielkhashabi.com/files/2019_mctaco/mctaco-slides-v3.pdf">[slides]</a> <a href="https://vimeo.com/426360973">[talk]</a> <a href="https://github.com/CogComp/MCTACO">[code]</a> <a href="https://leaderboard.allenai.org/mctaco/submissions/public">[leaderboard]</a></font></p>
 </li>
 </ul>
@@ -387,6 +377,10 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/1906.03538"><b>Seeing Things from a Different Angle: Discovering Diverse Perspectives about Claims.</b></a>  <br />    <a href="https://www.seas.upenn.edu/~sihaoc/"><font color="Black"> Sihao Chen</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Wenpeng Yin, <a href="https://www.cis.upenn.edu/~ccb/"><font color="Black"> Chris Callison-Burch</font></a> and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2019. <font size=-1><a href="http://danielkhashabi.com/files/2019_perspectrum/perspectrum-poster-naacl-2019.pdf">[poster]</a> <a href="https://github.com/CogComp/perspectrum">[code]</a> <a href="https://www.youtube.com/watch?v=rOgdaLHIDgE">[demo]</a> <a href="http://danielkhashabi.com/files/2019_perspectrum/viz.html">[visualization]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="http://arxiv.org/abs/1901.02522"><b>On the Possibilities and Limitations of Multi-hop Reasoning Under Linguistic Imperfections.</b></a>  <br />    <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Erfan  Sadeqi Azer, <a href="https://allenai.org/team/tushark"><font color="Black"> Tushar Khot</font></a>, <a href="https://allenai.org/team/ashishs"><font color="Black"> Ashish Sabharwal</font></a> and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />   <font color="DarkRed">arXiv</font>, 2019. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -459,7 +453,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-03 16:02:07 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-01-20 10:47:24 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
